<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_main_bottom_margin"
        android:paddingLeft="@dimen/activity_main_horizontal_margin"
        android:paddingRight="@dimen/activity_main_horizontal_margin"
        android:paddingTop="@dimen/activity_main_top_margin"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        tools:context="com.example.oleggutsev.helper.MainActivity">


    <LinearLayout
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logotype"
                android:id="@+id/LogoApplication"/>
        <TextView
                android:id="@+id/NameApplication"
                android:layout_width="match_parent"
                android:text="@string/app_name"
                android:textSize="@dimen/login_textSize"
                android:layout_marginBottom="@dimen/login_bottom_margin"
                style="@style/textView_style"/>
        <EditText
                android:inputType="textPersonName"
                android:id="@+id/Login"
                android:hint="@string/login"
                style="@style/edditText_style"
                android:drawableLeft="@drawable/account"/>
        <EditText
                android:inputType="textPassword"
                android:id="@+id/Password"
                android:hint="@string/main_password"
                style="@style/edditText_style"
                android:drawableLeft="@drawable/lock"/>
        <com.andexert.library.RippleView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                rv_centered="true">
            <Button
                    android:text="@string/sign_in"
                    android:id="@+id/buttonInput"
                    style="@style/button_style"
                    android:onClick="onClick"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"/>
        </com.andexert.library.RippleView>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:text="@string/not_an_account"
                    android:id="@+id/textView3"
                    style="@style/textView_style"/>
            <Button
                    android:text="@string/have_not_an_account"
                    android:textSize="14dp"
                    android:layout_marginLeft="5dp"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:background="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:onClick="onClick"
                    android:textAlignment="viewStart"
                    android:id="@+id/buttonRegister"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
